--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ verify_ssl = true
 django = "*"
 gunicorn = "*"
 python-dotenv = "*"
+whitenoise = "*"
+djangorestframework = "*"
 
 [requires]
 python_version = "3.8"
